--- a/styles/style.css
+++ b/styles/style.css
@@ -6,16 +6,54 @@
   /* here we've set a maximum page width */
   margin: 0 auto;
   /* this ensures that all content is centered on screens wider than 1600px */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  border: 2px solid blue;
   /* parameters for the header section */
 }
-
+.logo {
+  height: 31px;
+  width: 154px;
+}
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 6;
+  border: 2px solid red;
+}
+.header__title {
+  width: 730px;
+  margin-left: 64px;
+  flex-direction: row;
+  align-items: center;
+  z-index: 5;
+  border: 2px solid red;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+}
+.header__subtitle {
+  position: absolute;
+  bottom: 0;
+  width: 388px;
+  margin-bottom: 30px;
+  margin-left: 64px;
+  z-index: 4;
+}
+.header__main-illustration {
+  width: 756px;
+  height: 608px;
+  border: 2px solid red;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
