--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,10 @@
   font-size: 18px;
   font-weight: normal;
 }
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
 .header__main-illustration {
   width: 756px;
   height: 608px;
@@ -86,6 +90,8 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
   border: 2px solid green;
 }
 .two-columns__main-text {
@@ -93,18 +99,70 @@
   min-width: 784px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   border: 2px solid purple;
 }
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  border: 2px solid purple;
 }
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
+}
+.digits {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+.section-title {
+  width: 60%;
+  margin: 0 0 20px;
+  text-align: center;
+  align-self: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  border: 2px solid red;
+}
+.section-subtitle {
+  width: 60%;
+  margin-bottom: 60px;
+  text-align: center;
+  align-self: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  border: 2px solid red;
+}
+.table {
+  margin: auto;
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border: 2px solid orangered;
+}
+.table__cell {
+  width: 250px;
+  border: 2px solid blue;
+}
+.table__heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  border: 2px solid red;
+}
+.table__text {
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  border: 2px solid red;
 }
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
