--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
 .header__subtitle {
   width: 388px;
   position: absolute;
-  bottom: 30px;
+  bottom: 35px;
   left: 64px;
   z-index: 2;
   line-height: 25px;
@@ -47,6 +47,9 @@
   font-weight: normal;
 }
 .header__link {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
   text-decoration: none;
   color: #2f80ed;
 }
