--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   background-color: #f2f2f2;
+  overflow: hidden;
   /* parameters for the header section */
 }
 .header__title {
@@ -48,4 +49,5 @@
   right: 0;
   z-index: 0;
   background-color: #2f80ed;
+  transform: rotate(-15deg);
 }
