--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,10 @@
+@import url(../blocks/rotation.css);
 @import url(../blocks/header.css);
 @import url(../blocks/logo.css);
 @import url(../blocks/description.css);
 @import url(../blocks/two-columns.css);
+@import url(../blocks/techniques.css);
+@import url(../blocks/cards.css);
 @import url(../blocks/digits.css);
 @import url(../blocks/section-title.css);
 @import url(../blocks/section-subtitle.css);
