--- a/blocks/khan.css
+++ b/blocks/khan.css
@@ -2,6 +2,8 @@
   outline-style: solid;
   outline-color: red;
   outline-width: 1px;
+  background-color: #f2f2f2;
+  padding-top: 100px;
 }
 .khan__container {
   width: 80%;
@@ -11,17 +13,50 @@
   outline-width: 1px;
 }
 .khan__author {
+  margin: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  outline-style: solid;
+  outline-color: red;
+  outline-width: 1px;
 }
 .khan__title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  outline-style: solid;
+  outline-color: red;
+  outline-width: 1px;
 }
 .khan__quote {
   margin: 50px 0 36px;
   width: 790px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  outline-style: solid;
+  outline-color: red;
+  outline-width: 1px;
 }
 .khan__quote-author {
+  line-height: 1.15;
+  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+  outline-style: solid;
+  outline-color: red;
+  outline-width: 1px;
 }
 .khan__quote-author-subline {
   margin: 10px 0 68px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  outline-style: solid;
+  outline-color: red;
+  outline-width: 1px;
 }
 .khan__book-container {
   outline-style: solid;
@@ -29,10 +64,11 @@
   outline-width: 1px;
   display: flex;
   column-gap: 48px;
+  margin-bottom: -200px;
 }
 .khan__book-pic {
   width: 608px;
-  height: 620px;
+  min-height: 620px;
   outline-style: solid;
   outline-color: red;
   outline-width: 1px;
@@ -41,4 +77,9 @@
   outline-style: solid;
   outline-color: red;
   outline-width: 1px;
+  text-decoration: none;
+  color: #2f80ed;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
 }
