--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,6 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/rotation.css);
+@import url(../blocks/transition.css);
 @import url(../blocks/header.css);
 @import url(../blocks/logo.css);
 @import url(../blocks/description.css);
@@ -15,6 +17,7 @@
 @import url(../blocks/feynman.css);
 @import url(../blocks/kaufman.css);
 @import url(../blocks/kaufman-triangle.css);
+@import url(../blocks/resources.css);
 @import url(../blocks/footer.css);
 
 .page {
