--- a/blocks/khan.css
+++ b/blocks/khan.css
@@ -1,34 +1,22 @@
 .khan {
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
   background-color: #f2f2f2;
   padding-top: 100px;
 }
 .khan__container {
   width: 80%;
   margin: auto;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
 }
 .khan__author {
   margin: 0;
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
 }
 .khan__title {
   margin: 0;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
 }
 .khan__quote {
   margin: 50px 0 36px;
@@ -36,47 +24,30 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
 }
 .khan__quote-author {
   line-height: 1.15;
   margin: 0;
   font-size: 24px;
   font-weight: bold;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
 }
 .khan__quote-author-subline {
   margin: 10px 0 68px;
   line-height: 1.15;
   font-size: 24px;
   font-weight: normal;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
 }
 .khan__book-container {
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
   display: flex;
-  column-gap: 48px;
-  margin-bottom: -200px;
+  height: 620px;
+  overflow: hidden;
 }
 .khan__book-pic {
   width: 608px;
-  min-height: 620px;
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
+  height: 927px;
+  margin-right: 48px;
 }
 .khan__buy-link {
-  outline-style: solid;
-  outline-color: red;
-  outline-width: 1px;
   text-decoration: none;
   color: #2f80ed;
   line-height: 42px;
