--- a/blocks/resources.css
+++ b/blocks/resources.css
@@ -1,11 +1,12 @@
 .resources {
   margin-top: 100px;
+  margin-bottom: 217px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .resources__logo-zone {
-  margin: 80px auto 217px;
+  margin: 80px 0 0;
   width: 1100px;
   display: flex;
 }
